--- a/PS22-peach-rmsprop-adam.ipynb
+++ b/PS22-peach-rmsprop-adam.ipynb
@@ -1,2 +1,155 @@
-Implement CNNs using Adam and RMSprop optimizers with a learning rate of 0.001 on Peach 
-images. Record validation loss and accuracy.
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "0714a116",
+   "metadata": {},
+   "source": [
+    "Implement CNNs using Adam and RMSprop optimizers with a learning rate of 0.001 on Peach \n",
+    "images. Record validation loss and accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81b3f2c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras import layers, models, optimizers\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "\n",
+    "# Set parameters\n",
+    "IMG_HEIGHT = 128\n",
+    "IMG_WIDTH = 128\n",
+    "BATCH_SIZE = 32\n",
+    "EPOCHS = 20\n",
+    "LEARNING_RATE = 0.001\n",
+    "\n",
+    "# Update these paths according to your dataset structure\n",
+    "# Assumes structure: peach_dataset/train/[classes], peach_dataset/val/[classes]\n",
+    "train_dir = '/home/adithya/Deep_Learning/DL3_Dataset/Peach/Train'\n",
+    "val_dir = '/home/adithya/Deep_Learning/DL3_Dataset/Peach/Val'\n",
+    "\n",
+    "# Data generators\n",
+    "train_datagen = ImageDataGenerator(\n",
+    "    rescale=1./255,\n",
+    "    rotation_range=20,\n",
+    "    zoom_range=0.2,\n",
+    "    width_shift_range=0.2,\n",
+    "    height_shift_range=0.2,\n",
+    "    horizontal_flip=True\n",
+    ")\n",
+    "val_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "def build_cnn_model(input_shape, num_classes):\n",
+    "    model = models.Sequential([\n",
+    "        layers.Conv2D(32, (3,3), activation='relu', input_shape=input_shape),\n",
+    "        layers.MaxPooling2D(2,2),\n",
+    "        layers.Conv2D(64, (3,3), activation='relu'),\n",
+    "        layers.MaxPooling2D(2,2),\n",
+    "        layers.Conv2D(128, (3,3), activation='relu'),\n",
+    "        layers.MaxPooling2D(2,2),\n",
+    "        layers.Flatten(),\n",
+    "        layers.Dense(128, activation='relu'),\n",
+    "        layers.Dropout(0.5),\n",
+    "        layers.Dense(num_classes, activation='softmax')\n",
+    "    ])\n",
+    "    return model\n",
+    "\n",
+    "def plot_history(histories, optimizer_names):\n",
+    "    plt.figure(figsize=(12, 5))\n",
+    "    for i, history in enumerate(histories):\n",
+    "        plt.subplot(1, 2, 1)\n",
+    "        plt.plot(history.history['val_accuracy'], label=optimizer_names[i])\n",
+    "        plt.title('Validation Accuracy')\n",
+    "        plt.xlabel('Epoch')\n",
+    "        plt.ylabel('Accuracy')\n",
+    "        plt.legend()\n",
+    "        \n",
+    "        plt.subplot(1, 2, 2)\n",
+    "        plt.plot(history.history['val_loss'], label=optimizer_names[i])\n",
+    "        plt.title('Validation Loss')\n",
+    "        plt.xlabel('Epoch')\n",
+    "        plt.ylabel('Loss')\n",
+    "        plt.legend()\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    if not os.path.exists(train_dir):\n",
+    "        raise FileNotFoundError(f\"Training directory '{train_dir}' does not exist. Please check your dataset path.\")\n",
+    "    class_folders = [d for d in os.listdir(train_dir) if os.path.isdir(os.path.join(train_dir, d))]\n",
+    "    if not class_folders:\n",
+    "        raise ValueError(f\"No class subfolders found in '{train_dir}'. Please organize your dataset as '{train_dir}/class_name/'.\")\n",
+    "    num_classes = len(class_folders)\n",
+    "    print(f'Number of classes: {num_classes}')\n",
+    "\n",
+    "    train_generator = train_datagen.flow_from_directory(\n",
+    "        train_dir,\n",
+    "        target_size=(IMG_HEIGHT, IMG_WIDTH),\n",
+    "        batch_size=BATCH_SIZE,\n",
+    "        class_mode='categorical'\n",
+    "    )\n",
+    "    val_generator = val_datagen.flow_from_directory(\n",
+    "        val_dir,\n",
+    "        target_size=(IMG_HEIGHT, IMG_WIDTH),\n",
+    "        batch_size=BATCH_SIZE,\n",
+    "        class_mode='categorical'\n",
+    "    )\n",
+    "\n",
+    "    optimizers_list = [\n",
+    "        ('Adam', optimizers.Adam(learning_rate=LEARNING_RATE)),\n",
+    "        ('RMSprop', optimizers.RMSprop(learning_rate=LEARNING_RATE))\n",
+    "    ]\n",
+    "    histories = []\n",
+    "    for name, optimizer in optimizers_list:\n",
+    "        print(f\"\\nTraining with optimizer: {name}\")\n",
+    "        model = build_cnn_model((IMG_HEIGHT, IMG_WIDTH, 3), num_classes)\n",
+    "        model.compile(\n",
+    "            optimizer=optimizer,\n",
+    "            loss='categorical_crossentropy',\n",
+    "            metrics=['accuracy']\n",
+    "        )\n",
+    "        history = model.fit(\n",
+    "            train_generator,\n",
+    "            epochs=EPOCHS,\n",
+    "            validation_data=val_generator,\n",
+    "            verbose=1\n",
+    "        )\n",
+    "        histories.append(history)\n",
+    "\n",
+    "    plot_history(histories, [name for name, _ in optimizers_list])\n",
+    "\n",
+    "    for i, (name, _) in enumerate(optimizers_list):\n",
+    "        val_acc = histories[i].history['val_accuracy'][-1]\n",
+    "        val_loss = histories[i].history['val_loss'][-1]\n",
+    "        print(f\"{name}: Final Validation Accuracy = {val_acc:.4f}, Final Validation Loss = {val_loss:.4f}\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "tensorflow_env",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
